tests/valid/using_proc_param.lang
import "core:c";

typedef Struct struct {
    a: i32,
    b: struct {
        c: i32,
    }
};

fn my_func(using str: Struct) {
    printf(c"%d\n", a);
    printf(c"%d\n", b.c);
}

fn main() {
    var str: Struct;
    str.a = 123;
    str.b.c = 321;
    my_func(str);
}
